fix 'view all reviews' reviews not always being vertically aligned

--- a/project/assets/robTable/components/ScoreDisplay/ScoreDisplay.css
+++ b/project/assets/robTable/components/ScoreDisplay/ScoreDisplay.css
@@ -1,4 +1,4 @@
 .score-display {
     flex: 1;
-    padding-bottom: .8rem;
+    padding: .8rem 0;
 }
